Correct more link alignment in index

--- a/styles/index.css
+++ b/styles/index.css
@@ -168,7 +168,6 @@ body {
   }
 }
 
-
 .mobile-button-container {
   width: 45%;
   height: inherit;
@@ -263,6 +262,7 @@ body {
   .more-link-desktop > img {
     width: 32px;
     margin-top: 5px;
+    margin-right: -10px;
   }
 }
 
